--- a/app/views/multiple_choice_questions/new.html.erb
+++ b/app/views/multiple_choice_questions/new.html.erb
@@ -1,4 +1,4 @@
 <div class="page-header">
-  <h2>New Multiple Choice Quetion</h2>
+  <h2>New Multiple Choice Question</h2>
 </div>
 <%= render "form" %>
