Created Student dashboard

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <head>
-    <title>SeedPod3</title>
+    <title>Aziza</title>
   </head>
   <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", media: "all", "data-turbolinks-track" => true %>
@@ -18,8 +18,8 @@
             <section>
               <% flash.each do |key, value| %>
                 <div class="<%= flash_alert_class(key) %>" id="div">
-                  <button class="close" data={dismiss="alert"} type="button">, "aria-hidden".to_sym="true" 
-                    &times;
+                  <button class="close" data={dismiss="alert"} type="button", "aria-hidden".to_sym="true" 
+                    &times;>
                   </button>
                   <%= raw value %>
                 </div>
