--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -4,7 +4,7 @@
   </h3>
 </div>
 
-<%if @test.status != "completed"%>
+<%if @test.status != "completed"  and current_user.teacher?%>
 <div class="row">
   <div class="col-md-6 col-sm-6">
     <div class="form-group">
@@ -15,47 +15,63 @@
     </div>
   </div>
   <div class="col-md-6 col-sm-6 pull-right">
-    <%= button_to "Create Question", new_multiple_choice_question_path, method: :get, params: {test_id: @test.id} , "onclick" => "createQuestion()", "id" => "button", :class => 'btn btn-primary'%>
+    <button class="btn btn-primary" type="button" id="button_one" test_id="<%=@test.id%>" >Select QuestionType!</button>
   </div>
 </div>
 <%end %>
 <div class="row">
-  <% @multiple_choice_questions.each do |mcq| %>
+  <% @total_questions.each do |tq| %>
+  <%if tq.question_type == 'multiple_choice' %>
   <p>
     <strong>Question:</strong>
-    <%= mcq.description %>
+    <%= tq.description %>
   </p>
 
   <p>
     <strong>Option 1:</strong>
-    <%= mcq.option_1 %>
+    <%= tq.option_1 %>
   </p>
 
   <p>
     <strong>Option 2:</strong>
-    <%= mcq.option_2 %>
+    <%= tq.option_2 %>
   </p>
 
   <p>
     <strong>Option 3:</strong>
-    <%= mcq.option_3 %>
+    <%= tq.option_3 %>
   </p>
 
   <p>
     <strong>Option 4:</strong>
-    <%= mcq.option_4 %>
+    <%= tq.option_4 %>
   </p>
   </br>
   <p>
     <strong>Answer:</strong>
-    <%= mcq.answer %>
+    <%= tq.answer %>
   </p>
 
-  <%if @test.status != "completed"%>
+  <%if @test.status != "completed"  and current_user.teacher?%>
   <div class="col-md-6 col-sm-6 pull-right">
-    <%= button_to "Edit Question", edit_multiple_choice_question_path(mcq), method: :get, params: {page: params[:page]}, :class => 'btn btn-primary'%>
+    <%= button_to "Edit Question", edit_multiple_choice_question_path(tq), method: :get, params: {page: params[:page]}, :class => 'btn btn-primary'%>
   </div>
   <% end %>
+  <%else %>
+  <p>
+    <strong>Question:</strong>
+    <%= tq.description %>
+  </p>
+  <p>
+    <strong>Answer:</strong>
+    <%= tq.answer %>
+  </p>
+  <%if @test.status != "completed" and current_user.teacher?%>
+  <div class="col-md-6 col-sm-6 pull-right">
+    <%= button_to "Edit Question", edit_descriptive_question_path(tq), method: :get, params: {page: params[:page]}, :class => 'btn btn-primary'%>
+  </div>
   <% end %>
-  <%= will_paginate @multiple_choice_questions %>
+  <%end%>
+  <% end %>
+  <%= will_paginate @total_questions %>
 </div>
