Created student dashboard

--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -28,7 +28,7 @@
     <%= tq.description %>
   </p>
 
-<%= image_tag mcq.image.url(:medium) %>
+<%= image_tag tq.image.url(:medium) %>
 
   <p>
     <strong>Option 1:</strong>
