--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -20,7 +20,7 @@
                 <% end %>
 
                  <li>
-            <%= link_to "View Profile", "#" %>
+            <%= link_to "View Profile", registrations_show_path %>
           </li>
 
           <li>
