--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -35,7 +35,7 @@
   <% end %>
   <% else %>
   <div class="col-md-12">
-    <button type="button" disabled="true" class='btn btn-large btn-warning'>There is No Completed Exams!</button>
+    <button type="button" disabled="true" class='btn btn-large btn-warning'>There is No past Exams!</button>
   </div>
   <% end %>
 </div>
