multiple choice teacher reports

--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -1,21 +1,18 @@
 <div class="page-header">
+  <%if params[:report].present? %>
+  <h3>
+    <%= link_to @test.test_name,"#" %>
+  </h3>
+  <%else %>
   <h3>
     <%= link_to @test.test_name, @test %>
   </h3>
+  <%end %>
   <% if current_user.student?%>
   <h4>
     Marks Obtained : <mark><%= get_student_test_result(@test.id) %></mark>
   </h4>
   <%end %>
-  <!-- <%if current_user.teacher? and @test.report == "true"%> -->    
-  <!-- Attempted Students : <mark><%= @attempted_students %></mark> -->   
-  <!-- <% end %>&nbsp&nbsp -->    
-  <!-- <%if current_user.teacher? and @test.report == "true"%> -->    
-  <!-- Correct Attempted Students : <mark><%= @correct_attempted_students %></mark> -->   
-  <!-- <% end %>&nbsp&nbsp -->    
-  <!-- <%if current_user.teacher? and @test.report == "true"%> -->    
-  <!-- Wrong Attempted Students: <mark><%= @wrong_attempted_students %></mark> -->    
-  <!-- <% end %> -->
 </div>
 
 <%if current_user.teacher? and @test.report != "true"%>
@@ -32,73 +29,138 @@
   </div>
 </div>
 <%end %>
-
-
-<div class="row">
+  <div class="col-md-12">
   <% @total_questions.each do |tq| %>
   <%if tq.question_type == 'multiple_choice' %>
   <%if current_user.teacher? and @test.report == "true"%>
+  <div class="col-md-12">
   Attempted Students : <mark><%= tq.attempted_students_count %></mark>&nbsp&nbsp
   Correct Attempted Students : <%= link_to tq.correct_attempted_students_count,"#", id: "correct" %>&nbsp&nbsp
   Wrong Attempted Students: <%= link_to tq.wrong_attempted_students_count,"#", id: "wrong" %>
-
+</div>
   <%end %>
-  <p>
-    <strong>Question:</strong>
-    <%= tq.description %>
-  </p>
-
-<%= image_tag tq.image.url(:medium) %>
-
-  <p>
-    <strong>Option 1:</strong>
-    <%= tq.option_1 %>
-  </p>
-
-  <p>
-    <strong>Option 2:</strong>
-    <%= tq.option_2 %>
-  </p>
-
-  <p>
-    <strong>Option 3:</strong>
-    <%= tq.option_3 %>
-  </p>
-
-  <p>
-    <strong>Option 4:</strong>
-    <%= tq.option_4 %>
-  </p>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="col-md-4">
+        <p>
+          <strong>Question:</strong>
+          <%= tq.description %>
+        </p>
+      </div>
+    </div>
+    <div class="col-md-12">
+      <div class="col-md-4">
+        <p>
+          <strong>Option 1:</strong>
+          <%= tq.option_1 %>
+        </p>
+      </div>
+      <div class="col-md-6">
+        <p>
+          <h4 class=<%= tq.option1_class %>><b><%= tq.option1_report %></b></h4>
+        </p>
+      </div>
+    </div>
+    <div class="col-md-12">
+      <div class="col-md-4">
+        <p>
+          <strong>Option 2:</strong>
+          <%= tq.option_2 %>
+        </p>
+      </div>
+      <div class="col-md-6">
+        <p>
+          <h4 class=<%= tq.option2_class %>><b><%= tq.option2_report %></b></h4>
+        </p>
+      </div>
+    </div>
+    <div class="col-md-12">
+      <div class="col-md-4">
+        <p>
+          <strong>Option 3:</strong>
+          <%= tq.option_3 %>
+        </p>
+      </div>
+      <div class="col-md-6">
+        <p>
+          <h4 class=<%= tq.option3_class %>><b><%= tq.option3_report %></b></h4>
+        </p>
+      </div>
+    </div>
+    <div class="col-md-12">
+      <div class="col-md-4">
+        <p>
+          <strong>Option 4:</strong>
+          <%= tq.option_4 %>
+        </p>
+      </div>
+      <div class="col-md-6">
+        <p>
+          <h4 class=<%= tq.option4_class %>><b><%= tq.option4_report %></b></h4>
+        </p>
+      </div>
+    </div>
+  </div>
   </br>
-  <p>
-    <strong>Answer:</strong>
-    <%= tq.answer %>
-  </p>
-  
+  <%if current_user.teacher?%>
+  <div class="col-md-12">
+    <p>
+      <strong>Answer:</strong>
+      <%= tq.answer %>
+    </p>
+  </div>
+  <%end%>
+  <%if current_user.teacher? and @test.report == "true"%>
+  <div class="col-md-12">
+    <h4><b>Overall:</b> <b style="color:green"><%= tq.correct_attempted_students_count%></b>  <b>out of</b>  <b style="color:green"><%=tq.attempted_students_count%></b>  <b>students answered</b> <b style="color:green">correct </b>  <b>(</b> <b style="color:green"><%= (tq.correct_attempted_students_count.to_f/tq.attempted_students_count).round( 2 )*100%></b> <b style="color:green">%</b> <b>)</b>
+    </h4>
+  </div>
+  <%end%>
   <% if current_user.student?%>
   <p>
     <strong>Your Answer:</strong>
     <%= get_student_answer(tq.id,tq.test_id,tq.question_type) %>
   </p>
   <p>
-    <strong>Result:</strong>
-    <%= get_student_result(tq.id,tq.test_id,tq.question_type) %>
+    <%if  get_student_result(tq.id,tq.test_id,tq.question_type) == true%>
+    <h2 class="correct_option"><b>Correct!</b></h2>
+    <%elsif  get_student_result(tq.id,tq.test_id,tq.question_type) == false%>
+    <h2 class="incorrect_option"><b>Incorrect!</b></h2>
+    <%end%>
   </p>
   <%end %>
   <%if current_user.teacher? and @test.report == "true"%>
   <div class="row" id="correct_student">
-    <% tq.correct_attempted_students.each do |student| %>
-    <div class="row">
-      <%= User.find(student.user_id).name %>
-    </div>
-    <%end %>
+    <table class="table table-bordered table-hover">
+      <tbody>
+        <tr>
+          <th>Name</th>
+          <th>Answer</th>
+        </tr>
+        <% tq.correct_attempted_students_and_answers.each do |student| %>
+        <tr>
+          <td><%= User.find(student[:user_id]).name %></td>
+          <td><%= student[:answer] %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
   </div>
   <div class="row" id="wrong_student">
-    <% tq.wrong_attempted_students.each do |student| %>
-    <div class="row">
-      <%= User.find(student.user_id).name %>
-    </div>
-    <%end %>
+    <table class="table table-bordered table-hover">
+      <tbody>
+        <tr>
+          <th>Name</th>
+          <th>Answer</th>
+        </tr>
+        <% tq.wrong_attempted_students_and_answers.each do |student| %>
+        <tr>
+          <td><%= User.find(student[:user_id]).name %></td>
+          <td><%= student[:answer] %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
   </div>
   <%end %>
 
@@ -106,7 +168,7 @@
   <div class="col-md-6 col-sm-6 pull-right">
     <%= button_to "Edit Question", edit_multiple_choice_question_path(tq), method: :get, params: {page: params[:page]}, :class => 'btn btn-primary'%>
   </div>
-  <% end %>
+  <%end %>
   <%else %>
   <%if current_user.teacher? and @test.report == "true"%>
   Attempted Students : <%= link_to tq.attempted_students_count,"#", id: "short_answer" %>
@@ -115,36 +177,49 @@
     <strong>Question:</strong>
     <%= tq.description %>
   </p>
+  <%if !current_user.student?%>
   <p>
     <strong>Answer:</strong>
     <%= tq.answer %>
   </p>
+  <%end%>
   <% if current_user.student?%>
   <p>
     <strong>Your Answer:</strong>
     <%= get_student_answer(tq.id,tq.test_id,tq.question_type) %>
   </p>
   <p>
-    <strong>Result:</strong>
-    <%= get_student_result(tq.id,tq.test_id,tq.question_type) %>
+    <%if  get_student_result(tq.id,tq.test_id,tq.question_type) == true%>
+    <h2 class="correct_option"><b>Correct!</b></h2>
+    <%elsif  get_student_result(tq.id,tq.test_id,tq.question_type) == false%>
+    <h2><b>See Instructor for correct answer!</b></h2>
+    <%end%>
   </p>
   <% end %>
   <%if current_user.teacher? and @test.report == "true"%>
   <div class="row" id="attempted_student">
-    <% tq.attempted_students.each do |student| %>
-    <div class="row">
-      <%= User.find(student.user_id).name %>
-    </div>
-    <%end %>
+    <table class="table table-bordered table-hover">
+      <tbody>
+        <tr>
+          <th>Name</th>
+          <th>Answer</th>
+        </tr>
+        <% tq.attempted_students_and_answers.each do |student| %>
+        <tr>
+          <td><%= User.find(student[:user_id]).name %></td>
+          <td><%= student[:answer] %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
   </div>
   <%end %>
   <%if current_user.teacher? and @test.report != "true"%>
   <div class="col-md-6 col-sm-6 pull-right">
     <%= button_to "Edit Question", edit_descriptive_question_path(tq), method: :get, params: {page: params[:page]}, :class => 'btn btn-primary'%>
   </div>
-  <% end %>
-  <%end%>
-  <% end %>
+  <%end %>
+  <%end %>
+  <%end %>
   <%= will_paginate @total_questions %>
 </div>
-
