--- a/app/views/tests/current_exam.html.erb
+++ b/app/views/tests/current_exam.html.erb
@@ -57,7 +57,7 @@
     <div class="col-md-4 col-sm-8 pull-right">
       <%= f.hidden_field :test_id%>
       <%= f.hidden_field :user_id, :value => current_user.id%>
-      <%= f.submit "Submit Exam", :class => 'btn btn-primary' %>
+      <%= f.submit "Submit test", :class => 'btn btn-primary' %>
     </div>
   </div>
 <% end %>
