--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -13,7 +13,7 @@
         <%= button_to "Activate", activate_test_tests_path, method: :get, params: {test_id: test.id}, :class => 'btn btn-large btn-primary'%>
       </td>
       <td>
-        <%= button_to "Deactivated", deactivate_test_tests_path, method: :get, params: {test_id: test.id}, :class => 'btn btn-large btn-warning'%>
+        <%= button_to "Deactivate", deactivate_test_tests_path, method: :get, params: {test_id: test.id}, :class => 'btn btn-large btn-warning'%>
       </td>
     </tr>
     <% end %>
