--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,10 @@
+<!-- If the user is successfully logged into the application -->
 <% if current_user.present? %>
 <div class="page-header">
-  <h2>Current Exam</h2>
+  <h2>Current test</h2>
 </div>
+
+<!-- if there is a activated test -->
 <% if @current_test_id.present? %>
 <div class="col-md-12">
   <div class="col-md-3">
@@ -12,15 +15,18 @@
     <%= button_to "Take" , current_exam_tests_path, :method => :get, :class => 'btn btn-large btn-info'%>
   </div>
 </div>
+
+<!-- there is no test activated -->
 <% else %>
 <div class="col-md-12">
-  <button type="button" disabled="true" class='btn btn-large btn-warning'>Present No Exam Scheduled!</button>
+  <button type="button" disabled="true" class='btn btn-large btn-warning'>Present no test is scheduled!</button>
 </div>
 <% end %>
 
 <div class="page-header">
-  <h2>Past Exams</h2>
+  <h2>Past tests</h2>
 </div>
+<!-- If the student has completed any tests, display their names and reports -->
   <% if @student_completed_tests.present? %>
   <% @student_completed_tests.each_with_index do |student_completd_test,index| %>
   <div class="col-md-12">
@@ -29,13 +35,14 @@
     </div>
 
     <div class="col-md-3">
-      <%= button_to "view Report" , test_path(student_completd_test.test.id), :method => :get, :class => 'btn btn-large btn-info'%>
+      <%= button_to "view report" , test_path(student_completd_test.test.id), :method => :get, :class => 'btn btn-large btn-info'%>
     </div>
   </div>
   <% end %>
   <% else %>
+    <!-- student has not taken any test yet -->
   <div class="col-md-12">
-    <button type="button" disabled="true" class='btn btn-large btn-warning'>There is No past Exams!</button>
+    <button type="button" disabled="true" class='btn btn-large btn-warning'>There is no test taken!</button>
   </div>
   <% end %>
 </div>
