--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -20,16 +20,16 @@
                 <% end %>
 
                  <li>
-            <%= link_to "View Profile", registrations_show_path %>
+            <%= link_to "Your profile", registrations_show_path %>
           </li>
 
           <li>
-            <%= link_to "Sign-Out", destroy_user_session_path, :data => {:method => :delete} %>
+            <%= link_to "Sign out", destroy_user_session_path, :data => {:method => :delete} %>
           </li>
          
         <% else %>
           <li>
-            <%= link_to "Sign-IN", new_user_session_path %>
+            <%= link_to "Sign in", new_user_session_path %>
           </li>
         <% end %>
       </ul>
