--- a/app/views/shared/_teacher_side_bar.html.erb
+++ b/app/views/shared/_teacher_side_bar.html.erb
@@ -1,6 +1,6 @@
 <ul  class="nav navbar-nav">
   <!-- <li > -->
-  <!--   <%= link_to "All Quizs", tests_path %> -->
+  <!--   <%= link_to "All Quizzes", tests_path %> -->
   <!-- </li> -->
   <li >
     <%= link_to "New Quiz", new_test_path %>
