--- a/app/views/tests/_form.html.erb
+++ b/app/views/tests/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="row">
     <div class="col-md-6 col-sm-6 pull-right">
-      <%= f.submit "Create Exam", :class => 'btn btn-primary' %>
+      <%= f.submit "Create test", :class => 'btn btn-primary' %>
     </div>
   </div>
 
