--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -38,184 +38,8 @@
 
 
   <% @total_questions.each do |tq| %>
-  <hr style="border-width:2px;border-color:black;">
     <% @count = @count+1%>
     <h4>Question <%=@count%></h4>
-
-
-<!-- display reports for each option -->
-  <div class="row">
-    <div class="col-md-12">
-      <div class="col-md-4">
-        <p>
-          <strong>Question:</strong>
-          <%= tq.description %>
-            <%= image_tag tq.image.url(:medium) %>
-        </p>
-      </div>
-    </div>
-    <div class="col-md-12">
-      <div class="col-md-4">
-        <p>
-          <strong>Option 1:</strong>
-          <%= tq.option_1 %>
-        </p>
-      </div>
-      <div class="col-md-6">
-        <p>
-          <h4 class=<%= tq.option1_class %>><b><%= tq.option1_report %></b></h4>
-        </p>
-      </div>
-    </div>
-    <div class="col-md-12">
-      <div class="col-md-4">
-        <p>
-          <strong>Option 2:</strong>
-          <%= tq.option_2 %>
-        </p>
-      </div>
-      <div class="col-md-6">
-        <p>
-          <h4 class=<%= tq.option2_class %>><b><%= tq.option2_report %></b></h4>
-        </p>
-      </div>
-    </div>
-    <div class="col-md-12">
-      <div class="col-md-4">
-        <p>
-          <strong>Option 3:</strong>
-          <%= tq.option_3 %>
-        </p>
-      </div>
-      <div class="col-md-6">
-        <p>
-          <h4 class=<%= tq.option3_class %>><b><%= tq.option3_report %></b></h4>
-        </p>
-      </div>
-    </div>
-    <div class="col-md-12">
-      <div class="col-md-4">
-        <p>
-          <strong>Option 4:</strong>
-          <%= tq.option_4 %>
-        </p>
-      </div>
-      <div class="col-md-6">
-        <p>
-          <h4 class=<%= tq.option4_class %>><b><%= tq.option4_report %></b></h4>
-        </p>
-      </div>
-    </div>
-  </div>
-  </br>
-
-  <!-- If current user is a teacher, display correct answer -->
-  <%if current_user.teacher?%>
-  <div class="col-md-12">
-    <p>
-      <strong>Answer:</strong>
-      <%= tq.answer %>
-    </p>
-  </div>
-  <%end%>
-
-  <!-- if current user is a teacher and test report is selected, display overall performance -->
-  <%if current_user.teacher? and @test.report == "true"%>
-  <div class="col-md-12">
-    <h4><b>Overall:</b> <b style="color:green"><%= tq.correct_attempted_students_count%></b>  <b>out of</b>  <b style="color:green"><%=tq.attempted_students_count%></b>  <b>students answered</b> <b style="color:green">correct </b>  <b>(</b> <b style="color:green"><%= (tq.correct_attempted_students_count.to_f/tq.attempted_students_count).round( 2 )*100%></b> <b style="color:green">%</b> <b>)</b>
-    </h4>
-  </div>
-  <%end%>
-
-  <!-- if current user is a student, display student's answer -->
-  <% if current_user.student?%>
-  <p>
-    <strong>Your Answer:</strong>
-    <%= get_student_answer(tq.id,tq.test_id,tq.question_type) %>
-  </p>
-  <p>
-    <%if  get_student_result(tq.id,tq.test_id,tq.question_type) == true%>
-    <h2 class="correct_option"><b>Correct!</b></h2>
-    <%elsif  get_student_result(tq.id,tq.test_id,tq.question_type) == false%>
-    <h2 class="incorrect_option"><b>Incorrect!</b></h2>
-    <%end%>
-  </p>
-  <%end %>
-
-  <!-- if current user is a teacher and test report is selected, display list of correct responses and wrong responses -->
-  <%if current_user.teacher? and @test.report == "true"%>
-  <div class="row" id="correct_student">
-    <table class="table table-bordered table-hover">
-      <tbody>
-        <tr>
-          <th>Name</th>
-          <th>Answer</th>
-        </tr>
-        <% tq.correct_attempted_students_and_answers.each do |student| %>
-        <tr>
-          <td><%= User.find(student[:user_id]).name %></td>
-          <td><%= student[:answer] %></td>
-        </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
-  <div class="row" id="wrong_student">
-    <table class="table table-bordered table-hover">
-      <tbody>
-        <tr>
-          <th>Name</th>
-          <th>Answer</th>
-        </tr>
-        <% tq.wrong_attempted_students_and_answers.each do |student| %>
-        <tr>
-          <td><%= User.find(student[:user_id]).name %></td>
-          <td><%= student[:answer] %></td>
-        </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
-  <%end %>
-
-<!--If current user is a teacher and test is selected, give provision to edit the question -->
-  <%if current_user.teacher? and @test.report != "true" %>
-  <div class="col-md-6 col-sm-6 pull-right">
-    <%= button_to "Edit Question", edit_multiple_choice_question_path(tq), method: :get, params: {page: params[:page]}, :class => 'btn btn-primary'%>
-  </div>
-  <%end %>
-  <%else %>
-
-  <!-- if current user is a teacher and test report is selected, display number of attempted students for descriptive questions -->
-  <%if current_user.teacher? and @test.report == "true"%>
-  Attempted Students : <%= link_to tq.attempted_students_count,"#", id: "short_answer" %>
-  <%end %>
-  <p>
-    <strong>Question:</strong>
-    <%= tq.description %>
-  </p>
-
-  <!-- if current user is a teacher display correct answer -->
-  <%if current_user.teacher?%>
-
-  <p>
-    <strong>Answer:</strong>
-    <%= tq.answer %>
-  </p>
-  <%end%>
-
-
-<!-- search code  -->
-  <%if current_user.teacher? and @test.report == "true"%>
-  <div class="row">
-    <%= form_tag search_tests_path(:gim => 5), :method => 'get' , :class => "form-inline" do %>
-    <div class="col-md-8">
-      <div class="pull-right">
-        <%= autocomplete_field_tag :term, params[:term], autocomplete_student_name_tests_path, :class => "form-control", :placeholder => "Type Student Name",  :id_element => "#student_id" %>
-        <%= hidden_field_tag :student_id, "", :id => "student_id" %>
-        <%= hidden_field_tag :test_id, "", :value => @test.id %>
-        <%= hidden_field_tag :page, "", :value => params[:page]%>
-        <%= hidden_field_tag :question_id, "", :value => tq.id%>
 
     <%if tq.question_type == 'multiple_choice' %> <!--Beginning of multiple choice-->
       <%if current_user.teacher? and @test.report == "true"%>
@@ -304,6 +128,8 @@
           <h4><b>Overall:</b> <b style="color:green"><%= tq.correct_attempted_students_count%></b>  <b>out of</b>  <b style="color:green"><%=tq.attempted_students_count%></b>  <b>students answered</b> <b style="color:green">correct </b>  <b>(</b> <b style="color:green"><%= (tq.correct_attempted_students_count.to_f/tq.attempted_students_count).round( 2 )*100%></b> <b style="color:green">%</b> <b>)</b>
           </h4>
         </div>
+        <div class="col-md-12 col-sm-4 pull-left">
+        <hr style="border-width:2px;border-color:black;">
       <%end%>
 
       <% if current_user.student?%>
@@ -320,6 +146,8 @@
             <%end%>
           </p>
         </div>
+        <div class="col-md-12 col-sm-4 pull-left">
+        <hr style="border-width:2px;border-color:black;">
       <%end %>
 
       <%if current_user.teacher? and @test.report == "true"%>
@@ -361,9 +189,12 @@
         <div class="col-md-6 col-sm-6 pull-right">
           <%= button_to "Edit Question", edit_multiple_choice_question_path(tq), method: :get, params: {page: params[:page]}, :class => 'btn btn-primary'%>
         </div>
+        <div class="col-md-12 col-sm-4 pull-left">
+        <hr style="border-width:2px;border-color:black;">
       <%end %>
 
     <%else %>     <!--Beginning of short answer -->
+
       <%if current_user.teacher? and @test.report == "true"%>
         <div class="col-md-12">
           Attempted Students : <%= link_to tq.attempted_students_count,"#", id: "short_answer" %>
@@ -376,6 +207,7 @@
             <p>
               <br><strong>Question:</strong>
               <%= tq.description %>
+              <%= image_tag tq.image.url(:medium) %>
             </p>
           </div>
         </div>
@@ -383,52 +215,25 @@
       </div>
 
 
-  <!-- if current user is a student, display student's answer -->
-  <% if current_user.student?%>
-  <p>
-    <strong>Your Answer:</strong>
-    <%= get_student_answer(tq.id,tq.test_id,tq.question_type) %>
-    
-  </p>
-  
-  <p>
-   <%if  get_student_result(tq.id,tq.test_id,tq.question_type) == true%>
-    <h2 class="correct_option"><b>Correct!</b></h2>
-    <%elsif  get_student_result(tq.id,tq.test_id,tq.question_type) == false%>
-    <h2><b>See Instructor for correct answer!</b></h2>
-    <%end%>
-  </p>
-  <% end %>
-
 <!-- if current user is a teacher and test report is selected, display list of student responses -->
   <%if current_user.teacher? and @test.report == "true"%>
-  <div class="row" id="attempted_student">
-    <table class="table table-bordered table-hover">
-      <tbody>
-        <tr>
-          <th>Name</th>
-          <th>Answer</th>
-        </tr>
-        <% tq.attempted_students_and_answers.each do |student| %>
-        <tr>
-          <td><%= User.find(student[:user_id]).name %></td>
-          <td><%= student[:answer] %></td>
-        </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
+    <div class="row" id="attempted_student">
+      <table class="table table-bordered table-hover">
+        <tbody>
+          <tr>
+            <th>Name</th>
+            <th>Answer</th>
+          </tr>
+          <% tq.attempted_students_and_answers.each do |student| %>
+          <tr>
+            <td><%= User.find(student[:user_id]).name %></td>
+            <td><%= student[:answer] %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
   <%end %>
-
-  <!--If current user is a teacher and test is selected, give provision to edit the question -->
-  <%if current_user.teacher? and @test.report != "true"%>
-  <div class="col-md-6 col-sm-6 pull-right">
-    <%= button_to "Edit question", edit_descriptive_question_path(tq), method: :get, params: {page: params[:page]}, :class => 'btn btn-primary'%>
-  </div>
-  <%end %>
-  <%end %>
-  <%end %>
- <!-- <%= will_paginate @total_questions %> -->
 
       <%if current_user.teacher?%>
         <div class="col-md-12">
@@ -458,6 +263,8 @@
           </div>
           <%end%>
         </div>
+        <div class="col-md-12 col-sm-4 pull-left">
+        <hr style="border-width:2px;border-color:black;">
       <%end%>
 
       <% if current_user.student?%>
@@ -475,31 +282,16 @@
             <%end%>
           </p>
         </div>
+        <div class="col-md-12 col-sm-4 pull-left">
+        <hr style="border-width:2px;border-color:black;">
       <% end %>
-
-      <%if current_user.teacher? and @test.report == "true"%>
-        <div class="row" id="attempted_student">
-          <table class="table table-bordered table-hover">
-            <tbody>
-              <tr>
-                <th>Name</th>
-                <th>Answer</th>
-              </tr>
-              <% tq.attempted_students_and_answers.each do |student| %>
-              <tr>
-                <td><%= User.find(student[:user_id]).name %></td>
-                <td><%= student[:answer] %></td>
-              </tr>
-              <% end %>
-            </tbody>
-          </table>
-        </div>
-      <%end %>
 
       <%if current_user.teacher? and @test.report != "true"%>
         <div class="col-md-6 col-sm-6 pull-right">
           <%= button_to "Edit Question", edit_descriptive_question_path(tq), method: :get, params: {page: params[:page]}, :class => 'btn btn-primary'%>
         </div>
+        <div class="col-md-12 col-sm-4 pull-left">
+        <hr style="border-width:2px;border-color:black;">
       <%end %>
 
     <%end %>
