--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -32,14 +32,12 @@
 
 <!-- If the current user is a teacher and test report is selected, display statistics of the test -->
   <div class="col-md-12">
-
-<div class="col-md-12">
   <% @count = 0%>
 
 
   <% @total_questions.each do |tq| %>
     <% @count = @count+1%>
-    <h4>Question <%=@count%></h4>
+   
 
     <%if tq.question_type == 'multiple_choice' %> <!--Beginning of multiple choice-->
       <%if current_user.teacher? and @test.report == "true"%>
@@ -54,7 +52,7 @@
         <div class="col-md-12">
           <div class="col-md-4">
             <p>
-              <br><strong>Question:</strong>
+              <br><h4>Question <%=@count%></h4>
               <%= tq.description %>
               <% if tq.image.file? %>
                   <%= image_tag tq.image.url(:medium) %>
@@ -131,7 +129,7 @@
           </h4>
         </div>
         <div class="col-md-12 col-sm-4 pull-left">
-        <hr style="border-width:2px;border-color:black;">
+        <hr style="border-width:2px;border-color:black;"> </div>
       <%end%>
 
       <% if current_user.student?%>
@@ -149,7 +147,7 @@
           </p>
         </div>
         <div class="col-md-12 col-sm-4 pull-left">
-        <hr style="border-width:2px;border-color:black;">
+        <hr style="border-width:2px;border-color:black;"></div>
       <%end %>
 
       <%if current_user.teacher? and @test.report == "true"%>
@@ -192,7 +190,7 @@
           <%= button_to "Edit Question", edit_multiple_choice_question_path(tq), method: :get, params: {page: params[:page]}, :class => 'btn btn-primary'%>
         </div>
         <div class="col-md-12 col-sm-4 pull-left">
-        <hr style="border-width:2px;border-color:black;">
+        <hr style="border-width:2px;border-color:black;"></div>
       <%end %>
 
     <%else %>     <!--Beginning of short answer -->
@@ -215,62 +213,35 @@
             </p>
           </div>
         </div>
-
       </div>
 
-
-<!-- if current user is a teacher and test report is selected, display list of student responses -->
-  <%if current_user.teacher? and @test.report == "true"%>
-    <div class="row" id="attempted_student">
-      <table class="table table-bordered table-hover">
-        <tbody>
-          <tr>
-            <th>Name</th>
-            <th>Answer</th>
-          </tr>
-          <% tq.attempted_students_and_answers.each do |student| %>
-          <tr>
-            <td><%= User.find(student[:user_id]).name %></td>
-            <td><%= student[:answer] %></td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
+<%if current_user.teacher?%>
+  <p>
+    <strong>Answer:</strong>
+    <%= tq.answer %>
+  </p>
+  <%end%>
+  
+     <%if current_user.teacher? and @test.report == "true"%>
+  <div class="row">
+    <%= form_tag search_tests_path(:gim => 5), :method => 'get' , :class => "form-inline" do %>
+    <div class="col-md-8">
+      <div class="pull-right">
+        <%= autocomplete_field_tag :term, params[:term], autocomplete_student_name_tests_path, :class => "form-control", :placeholder => "Type Student Name",  :id_element => "#student_id" %>
+        <%= hidden_field_tag :student_id, "", :id => "student_id" %>
+        <%= hidden_field_tag :test_id, "", :value => @test.id %>
+        <%= hidden_field_tag :page, "", :value => params[:page]%>
+        <%= hidden_field_tag :question_id, "", :value => tq.id%>
+      </div>
     </div>
-  <%end %>
-
-      <%if current_user.teacher?%>
-        <div class="col-md-12">
-          <p>
-            <br><strong>Answer:</strong>
-            <%= tq.answer %>
-          </p>
-        </div>
-      <%end%>
-
-      <%if current_user.teacher? and @test.report == "true"%>
-        <div class="row">
-          <%= form_tag search_tests_path(:gim => 5), :method => 'get' , :class => "form-inline" do %>
-          <div class="col-md-8">
-            <div class="pull-right">
-              <%= autocomplete_field_tag :term, params[:term], autocomplete_student_name_tests_path, :class => "form-control", :placeholder => "Type Student Name",  :id_element => "#student_id" %>
-              <%= hidden_field_tag :student_id, "", :id => "student_id" %>
-              <%= hidden_field_tag :test_id, "", :value => @test.id %>
-              <%= hidden_field_tag :page, "", :value => params[:page]%>
-              <%= hidden_field_tag :question_id, "", :value => tq.id%>
-            </div>
-          </div>
-          <div class="col-md-2">
-            <button type="submit" class="btn btn-primary">
-              <i class="fa fa-search fa-lg"></i>Search
-            </button>
-          </div>
-          <%end%>
-        </div>
-        <div class="col-md-12 col-sm-4 pull-left">
-        <hr style="border-width:2px;border-color:black;">
-      <%end%>
-
+    <div class="col-md-2">
+      <button type="submit" class="btn btn-primary">
+        <i class="fa fa-search fa-lg"></i>Search
+      </button>
+    </div>
+    <%end%>
+  </div>
+  <%end%>
       <% if current_user.student?%>
         <div class="col-md-12">
           <p>
@@ -287,8 +258,27 @@
           </p>
         </div>
         <div class="col-md-12 col-sm-4 pull-left">
-        <hr style="border-width:2px;border-color:black;">
+        <hr style="border-width:2px;border-color:black;"> </div>
       <% end %>
+
+<%if current_user.teacher? and @test.report == "true"%>
+  <div class="row" id="attempted_student">
+    <table class="table table-bordered table-hover">
+      <tbody>
+        <tr>
+          <th>Name</th>
+          <th>Answer</th>
+        </tr>
+        <% tq.attempted_students_and_answers.each do |student| %>
+        <tr>
+          <td><%= User.find(student[:user_id]).name %></td>
+          <td><%= student[:answer] %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  <%end %>
 
       <%if current_user.teacher? and @test.report != "true"%>
         <div class="col-md-6 col-sm-6 pull-right">
